# svg_avatars

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: crates-publish.yaml  master.yaml
examples/: three_rings.rs
src/: lib.rs  main.rs  path_properties.rs  rings.rs  svg_avatar.rs  svg_avatar_builder.rs  svg_theme.rs
